<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="preview" android:title="@string/preview" android:summary="@string/preview_summary" />
    <SwitchPreference android:key="surprise" android:title="@string/surprise" android:summary="@string/surprise_summary"
        android:defaultValue="false" android:disableDependentsState="true" />
    <PreferenceCategory android:title="@string/cat_scene">
        <ListPreference android:key="theme" android:dependency="surprise" android:title="@string/theme" android:summary="%s"
            android:entries="@array/theme_names" android:entryValues="@array/theme_values" android:defaultValue="REEF" />
        <ListPreference android:key="style" android:dependency="surprise" android:title="@string/style" android:summary="%s"
            android:entries="@array/style_names" android:entryValues="@array/style_values" android:defaultValue="REALISTIC" />
        <ListPreference android:key="lighting" android:dependency="surprise" android:title="@string/lighting" android:summary="%s"
            android:entries="@array/lighting_names" android:entryValues="@array/lighting_values" android:defaultValue="DAY" />
        <ListPreference android:key="plants" android:dependency="surprise" android:title="@string/plants" android:summary="%s"
            android:entries="@array/plant_names" android:entryValues="@array/plant_values" android:defaultValue="1.0" />
        <ListPreference android:key="shimmer" android:dependency="surprise" android:title="@string/shimmer" android:summary="%s"
            android:entries="@array/shimmer_names" android:entryValues="@array/level3_random_values" android:defaultValue="1" />
        <ListPreference android:key="bubbles" android:dependency="surprise" android:title="@string/bubbles" android:summary="%s"
            android:entries="@array/bubble_names" android:entryValues="@array/level3_random_values" android:defaultValue="2" />
        <ListPreference android:key="specks" android:dependency="surprise" android:title="@string/particles" android:summary="%s"
            android:entries="@array/speck_names" android:entryValues="@array/speck_values" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cat_fish">
        <ListPreference android:key="fish_count" android:dependency="surprise" android:title="@string/fish_count" android:summary="%s"
            android:entries="@array/fish_names" android:entryValues="@array/fish_values" android:defaultValue="20" />
        <ListPreference android:key="schools" android:dependency="surprise" android:title="@string/schools" android:summary="%s"
            android:entries="@array/school_names" android:entryValues="@array/level4_random_values" android:defaultValue="2" />
        <ListPreference android:key="school_mix" android:dependency="surprise" android:title="@string/school_mix" android:summary="%s"
            android:entries="@array/school_mix_names" android:entryValues="@array/school_mix_values" android:defaultValue="single" />
        <ListPreference android:key="speed" android:dependency="surprise" android:title="@string/speed" android:summary="%s"
            android:entries="@array/speed_names" android:entryValues="@array/speed_values" android:defaultValue="1.0" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cat_sea_life">
        <MultiSelectListPreference android:key="sea_life" android:dependency="surprise" android:title="@string/sea_life" android:summary="@string/sea_life_summary"
            android:entries="@array/sea_life_names" android:entryValues="@array/sea_life_values" android:defaultValue="@array/sea_life_default" />
        <ListPreference android:key="sea_life_amount" android:dependency="surprise" android:title="@string/sea_life_amount" android:summary="%s"
            android:entries="@array/amount_names" android:entryValues="@array/level4_random_values" android:defaultValue="2" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cat_display">
        <ListPreference android:key="brightness" android:title="@string/brightness" android:summary="%s"
            android:entries="@array/brightness_names" android:entryValues="@array/brightness_values" android:defaultValue="100" />
        <ListPreference android:key="resolution" android:title="@string/resolution" android:summary="%s"
            android:entries="@array/resolution_names" android:entryValues="@array/resolution_values" android:defaultValue="0" />
        <ListPreference android:key="fps" android:title="@string/fps" android:summary="%s"
            android:entries="@array/fps_names" android:entryValues="@array/fps_values" android:defaultValue="0" />
        <SwitchPreference android:key="clock" android:title="@string/clock" android:summary="@string/clock_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
    <Preference android:key="reset" android:title="@string/reset" />
</PreferenceScreen>
